k8s/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zerodowntime-app-canary
  namespace: zerodowntime
  labels:
    app: zerodowntime-app
    track: canary
spec:
  type: ClusterIP
  selector:
    app: zerodowntime-app
    track: canary
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
